[workspace]
members = [
    "crates/*",
]

resolver = "2"

[workspace.dependencies]
alloy = { version = "1.0.36", features = ["full"] }
async-trait = "0.1.64"
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

