[package]
name = "mev_tools_core"
version = "0.1.0"
edition = "2021"
description = "Helper lib for creating mev bots"
license = "MIT"
repository = "https://github.com/0xfourzerofour/mev_tools"


[dependencies]
alloy.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
futures-util = "0.3.31"
